fixed rich selector expand icon alignment

--- a/packages/ag-grid-community/src/styles/ag-grid.scss
+++ b/packages/ag-grid-community/src/styles/ag-grid.scss
@@ -1131,9 +1131,10 @@ $handleSize: 5px;
         align-items: center;
         > span {
             flex: 1 1 auto;
-        }
-        .ag-icon {
-            order :1;
+            &.ag-icon {
+                order: 1;
+                flex: none;
+            }
         }
     }
     .ag-rich-select-list {
